--- a/app/src/main/res/layout/theme_activity.xml
+++ b/app/src/main/res/layout/theme_activity.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/theme_activity_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.thedeveloperworldisyours.themedagger.topic.TopicActivity">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/theme_activity_coordinatorLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <FrameLayout
             android:id="@+id/theme_activity_contentFrame"
@@ -18,4 +22,4 @@
             android:layout_height="match_parent" />
     </android.support.design.widget.CoordinatorLayout>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
